# venture

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yaml
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/data/: sample_proposal.json
backend/app/routes/: files.py  proposals.py
frontend/: README.md  design.html  jest.config.js  package.json  tsconfig.jest.json
frontend/app/: page.tsx
frontend/app/[id]/: page.tsx
frontend/app/api/generate/: route.ts
frontend/app/api/proposal/: route.js
frontend/app/api/upload/: route.ts
frontend/app/components/: BudgetSection.tsx  ExecutiveSummarySection.tsx  MarkdownRenderer.tsx  NextStepsSection.tsx  ObjectivesSection.tsx  ProblemStatementSection.tsx  ProposalContent.tsx  ProposalFooter.tsx  ProposalHero.tsx  SolutionOverviewSection.tsx  TeamSection.tsx  TimelineSection.tsx
frontend/app/lib/: types.ts
frontend/app/sample/: page.tsx
frontend/utils/: sum.test.ts
