[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pdfminer.six",
    "openai",
    "ruff>=0.11.13",
    "openai-agents>=0.0.17",
]
